--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <p>
                 Batatabit te ayuda a navegar entre los diferentes precios y tendencias.
             </p>
-            <a href="" class="header--button">
+            <a href="#plans" class="header--button">
                 Conoce Nuestros Planes <span> </span>
             </a>
         </div>
@@ -122,7 +122,41 @@
         <section class="bitcoin-img-container">
             <h2>Conócelo hoy.</h2>
         </section>
-        <section></section>
+        <section id="plans" class="main-plans-container">
+            <div class="plans--title">
+                <h2>Escoge el plan que mejor se ajuste a ti.</h2>
+                <p>Cualquier plan te da acceso completo a nuestra plataforma.</p>
+            </div>
+            <section class="plans-container--slider">
+                <article class="plans-container--card">
+                    <p class="recommended">Recomendado</p>
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--title">Pago Anual</h3>
+                        <p class="plan-card--price"><span>$</span>99</p>
+                        <p class="plan-card-saving">*Ahorras $129 comparado al plan mensual.</p>
+                        <button class="plan-card--ca">Escoger este <span></span></button>
+                    </div>
+                </article>
+                <article class="plans-container--card">
+                    <p class="month">Básico</p>
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--title">Pago Mensual</h3>
+                        <p class="plan-card--price"><span>$</span>9.99</p>
+                        <p class="plan-card-saving">*Plan mensual con todos los beneficios.</p>
+                        <button class="plan-card--ca">Escoger este <span></span></button>
+                    </div>
+                </article>
+                <article class="plans-container--card">
+                    <p class="week">Básico</p>
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--title">Pago semanal</h3>
+                        <p class="plan-card--price"><span>$</span>5.99</p>
+                        <p class="plan-card-saving">*Plan semanal con todos los beneficios.</p>
+                        <button class="plan-card--ca">Escoger este <span></span></button>
+                    </div>
+                </article>
+            </section>
+        </section>
     </main>
 
     <footer></footer>
