--- a/index.html
+++ b/index.html
@@ -159,6 +159,17 @@
         </section>
     </main>
 
-    <footer></footer>
+    <footer>
+        <section class="footer-left">
+            <ul>
+                <li><a href="#">Linkedin</a></li>
+                <li><a href="#">Crunchbase</a></li>
+                <li><a href="#">Hackernews</a></li>
+            </ul>
+        </section>
+        <section class="footer-right">
+            <img src="./assets/img/logo-footer.svg" alt="Logo de Batabit 2022">
+        </section>
+    </footer>
 </body>
 </html>
