--- a/index.html
+++ b/index.html
@@ -33,61 +33,63 @@
                 <h2>Visibilizamos todas las tasas de cambio.</h2>
                 <p>Traemos información en tiempo real de las casas de cambio y las monedas más importantes del mundo.</p>
             </div>
-            <section class="main-tables-container">
-                <div class="main-currency-table">
-                    <p class="currency-table--title">Modenas</p>
-                    <div class="currency-table--container">
-                        <table> <!-- Etiqueta para la creación de tablas -->
-                            <tr> <!-- Etiqueta para las filas de tabla -->
-                                <td class="table__top-left">Bitcoin</td><!-- Información que existe dentro de la fila -->
-                                <td class="table__top-right table__right">$1.96 <span class="arrow-down"></span> </td>
-                            </tr>
-                            <tr>
-                                <td>Ethereum</td>
-                                <td class="table__right">$0.07 <span class="arrow-up"></span> </td>
-                            </tr>
-                            <tr>
-                                <td>Ripple</td>
-                                <td class="table__right">$2.15 <span class="arrow-down"></span> </td>
-                            </tr>
-                            <tr>
-                                <td class="table__bottom-left">Stellar</td>
-                                <td class="table__bottom-right table__right">$4.96 <span class="arrow-down"></span> </td>
-                            </tr>
-                        </table>
+            <section class="tables-container">
+                <section class="main-tables-container">
+                    <div class="main-currency-table">
+                        <p class="currency-table--title">Modenas</p>
+                        <div class="currency-table--container">
+                            <table> <!-- Etiqueta para la creación de tablas -->
+                                <tr> <!-- Etiqueta para las filas de tabla -->
+                                    <td class="table__top-left">Bitcoin</td><!-- Información que existe dentro de la fila -->
+                                    <td class="table__top-right table__right">$1.96 <span class="arrow-down"></span> </td>
+                                </tr>
+                                <tr>
+                                    <td>Ethereum</td>
+                                    <td class="table__right">$0.07 <span class="arrow-up"></span> </td>
+                                </tr>
+                                <tr>
+                                    <td>Ripple</td>
+                                    <td class="table__right">$2.15 <span class="arrow-down"></span> </td>
+                                </tr>
+                                <tr>
+                                    <td class="table__bottom-left">Stellar</td>
+                                    <td class="table__bottom-right table__right">$4.96 <span class="arrow-down"></span> </td>
+                                </tr>
+                            </table>
+                        </div>
+                        <div class="currency-table--date">
+                            <p> <b>Actualizado:</b> 19 Julio 23:45</p>
+                        </div>
                     </div>
-                    <div class="currency-table--date">
-                        <p> <b>Actualizado:</b> 19 Julio 23:45</p>
+                </section>
+                <section class="comission-tables-container">
+                    <div class="comission-currency-table">
+                        <p class="comission-table--title">Comisiones</p>
+                        <div class="comission-table--container">
+                            <table> 
+                                <tr>
+                                    <td class="table__top-left">Bitrade</td>
+                                    <td class="table__top-right table__right">$12.96</td>
+                                </tr>
+                                <tr>
+                                    <td>Bitreco</td>
+                                    <td class="table__right">$13.07</td>
+                                </tr>
+                                <tr>
+                                    <td>Novadax</td>
+                                    <td class="table__right">$13.15</td>
+                                </tr>
+                                <tr>
+                                    <td class="table__bottom-left">Coinext</td>
+                                    <td class="table__bottom-right table__right">$14.96</td>
+                                </tr>
+                            </table>
+                        </div>
+                        <div class="comission-table--date">
+                            <p> <b>Actualizado:</b> 19 Julio 23:45</p>
+                        </div>
                     </div>
-                </div>
-            </section>
-            <section class="comission-tables-container">
-                <div class="comission-currency-table">
-                    <p class="comission-table--title">Comisiones</p>
-                    <div class="comission-table--container">
-                        <table> 
-                            <tr>
-                                <td class="table__top-left">Bitrade</td>
-                                <td class="table__top-right table__right">$12.96</td>
-                            </tr>
-                            <tr>
-                                <td>Bitreco</td>
-                                <td class="table__right">$13.07</td>
-                            </tr>
-                            <tr>
-                                <td>Novadax</td>
-                                <td class="table__right">$13.15</td>
-                            </tr>
-                            <tr>
-                                <td class="table__bottom-left">Coinext</td>
-                                <td class="table__bottom-right table__right">$14.96</td>
-                            </tr>
-                        </table>
-                    </div>
-                    <div class="comission-table--date">
-                        <p> <b>Actualizado:</b> 19 Julio 23:45</p>
-                    </div>
-                </div>
+                </section>
             </section>
         </section>
         <section class="main-product-detail">
