--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"> <!-- Por buenas practicas solo se usa una o dos fuentes por proyecto -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap" rel="stylesheet">
+    <meta property="og:url" content="https://euss99.github.io/RespDesign-PagEst/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Batatabit">
+    <meta property="og:description" content="Página que te ayuda a navegar entre los diferentes precios y tendencias de las criptomonedas, mostrando en tiempo real las tasas de cambio de las monedas más importantes del mundo">
+    <meta property="og:image" content="https://raw.githubusercontent.com/euss99/RespDesign-PagEst/main/image/batatabit.png">
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css" /> <!-- Estilos para mobile -->
     <link rel="stylesheet" href="./css/tablet.css" media="(min-width: 930px)" /> <!-- Estilo para tablets -->
