cambio de nombre de la pestaña de google

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Batatabit">
     <meta property="og:description" content="Página que te ayuda a navegar entre los diferentes precios y tendencias de las criptomonedas, mostrando en tiempo real las tasas de cambio de las monedas más importantes del mundo">
     <meta property="og:image" content="https://raw.githubusercontent.com/euss99/RespDesign-PagEst/main/image/batatabit.png">
-    <title>Document</title>
+    <title>Batatabit</title>
     <link rel="stylesheet" href="./css/style.css" /> <!-- Estilos para mobile -->
     <link rel="stylesheet" href="./css/tablet.css" media="(min-width: 930px)" /> <!-- Estilo para tablets -->
 </head>
